--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Donhe Burger</title>
     <link rel="stylesheet" href="style.css">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Link para Font Awesome -->
     <link rel="icon" href="./img/logo.jpg" type="image/x-icon"> <!-- Favicon -->
@@ -25,7 +25,7 @@
             <div class="login-options">
                 <div class="remember-me">
                     <input type="checkbox" id="remember-me" name="remember-me">
-                    <label for="remember-me">Manter-me logado</label>
+                    <label for="remember-me" class="remember-mme">Manter-me logado</label>
                 </div>
                 <a href="#" class="forgot-password">Esqueci minha senha</a>
             </div>
